--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "lyonelz96",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nanoid": "^4.0.0"
   }
 }
