--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "lyonelz96",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
