implemented auth flow with spotify

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spotify-readme-stats",
   "version": "1.0.0",
   "description": "Spotify stats for your github README",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
