--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spotify stats for your github README",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node ./src/index.mjs"
   },
   "author": "lyonelz96",
   "license": "ISC",
