--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spotify stats for your github README",
   "main": "index.mjs",
   "scripts": {
-    "start": "node ./src/index.mjs",
+    "dev": "NODE_ENV=development node ./src/index.mjs",
     "startdb": "./scripts/start_db.sh",
     "stopdb": "./scripts/stop_db.sh"
   },
