remove db scripts and move them to package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.mjs",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/index.mjs",
-    "startdb": "./scripts/start_db.sh",
-    "stopdb": "./scripts/stop_db.sh"
+    "startdb": "docker-compose -f ./src/db/compose.yaml --env-file ./.env up -d",
+    "stopdb": "docker-compose -f ./src/db/compose.yaml --env-file ./.env down -v"
   },
   "author": "lyonelz96",
   "license": "ISC",
