--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,17 @@
-# spotify Stuff
+# spotify stuff
 SPOTIFY_CLIENT_ID="app_client_id"
 SPOTIFY_CLIENT_SECRET="app_client_secret"
 
-# postgres Stuff
+# postgres stuff
 PG_USER='user'
 PG_PASSWORD='password'
 PG_HOST='host'
 PG_PORT='port'
+
+# pgadmin stuff
+PGADMIN_EMAIL='email'
+PGADMIN_PASSWORD='password'
+PGADMIN_PORT='port'
 
 # db docker compose stuff
 COMPOSE_DB_CONTAINER_NAME='container name'
