--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-jest": "^28.1.2",
     "jest": "^28.1.2",
     "nodemon": "^2.0.16"
   }
