--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "babel-jest": "^28.1.2",
+    "eslint_d": "^12.2.0",
     "jest": "^28.1.2",
     "nodemon": "^2.0.16"
   }
