--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@fsouza/prettierd": "^0.21.1",
     "babel-jest": "^28.1.2",
     "eslint_d": "^12.2.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.2",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "prettier": "^2.7.1"
   }
 }
