add linting,formatting scripts

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "NODE_ENV=development nodemon ./src/index.mjs",
     "prod": "NODE_ENV=production node ./src/index.mjs",
     "test": "jest",
+    "lint": "eslint_d \"./**\"",
+    "formatcheck": "prettier --check .",
+    "format": "prettier --write .",
     "startdb": "docker-compose -f ./src/db/compose.yaml --env-file ./.env up -d",
     "stopdb": "docker-compose -f ./src/db/compose.yaml --env-file ./.env down -v",
     "dbshell": "docker exec -it $npm_config_container psql -U $npm_config_user"
