--- a/src/db/compose.yaml
+++ b/src/db/compose.yaml
@@ -6,7 +6,7 @@ services:
             POSTGRES_USER: '${PG_USER}'
             POSTGRES_PASSWORD: '${PG_PASSWORD}'
         ports:
-            - '${PG_PORT}:${PG_PORT}'
+            - '${PG_PORT}:5432'
         volumes:
             - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
     pgadmin:
