--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "body-parser": "^1.20.0",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "express-rate-limit": "^6.5.1",
         "morgan": "^1.10.0",
         "nanoid": "^4.0.0",
         "pg": "^8.7.3"
