--- a/src/db/compose.yaml
+++ b/src/db/compose.yaml
@@ -8,7 +8,7 @@ services:
         ports:
             - '${PG_PORT}:5432'
         volumes:
-            - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+            - ./seed.sql:/docker-entrypoint-initdb.d/init_db.sql
     pgadmin:
         image: dpage/pgadmin4
         container_name: '${COMPOSE_DB_CONTAINER_NAME}-pgadmin'
